--- a/themes/koocam/css/responisve.css
+++ b/themes/koocam/css/responisve.css
@@ -182,6 +182,22 @@
 	text-shadow:none;
 }
 
+.accordion-toggle
+{
+	font-size:15px;
+}
+
+.panel-heading .accordion-toggle:after {
+   display:none;
+}
+.panel-heading .accordion-toggle.collapsed:after {
+	display:none;
+}
+
+.form-control {
+  margin-bottom: 10px;
+}
+
 }
 @media (min-width:768px) and (max-width:991px) {
  .nav > li > a {
