--- a/themes/koocam/css/style.css
+++ b/themes/koocam/css/style.css
@@ -601,6 +601,8 @@ a:hover {
 	width: 100%;
 	height: 100%;
 }
+
+
 .tt-fullHeight3 {
 	height: 350px;
 }
@@ -688,10 +690,8 @@ a:hover {
 	min-height: 100%;
 	font-size: 100px;
 	text-align: right;
-	filter: alpha(opacity=0);
 	opacity: 0;
 	outline: none;
-	background: #7e7e7e;
 	cursor: inherit;
 	display: block;
 	width:100%;
@@ -1224,7 +1224,8 @@ label {
     font-family: 'Glyphicons Halflings';  /* essential for enabling glyphicon */
     content: "\e114";    /* adjust as needed, taken from bootstrap.css */
     float: right;        /* adjust as needed */
-    color: grey;         /* adjust as needed */
+    color: #2e2e2e;         /* adjust as needed */
+	font-size:16px;
 }
 .panel-heading .accordion-toggle.collapsed:after {
     /* symbol for "collapsed" panels */
@@ -1240,5 +1241,302 @@ label {
 .accordion-toggle
 {
 	width:100%;
-	display:block
+	display:block;
+}
+
+
+.faq-cat-content {
+    margin-top: 25px;
+}
+
+.faq-cat-tabs li a {
+    padding: 15px 10px 15px 10px;
+    background-color: #ffffff;
+    border: 1px solid #dddddd;
+    color: #777777;
+}
+
+.nav-tabs li a:focus,
+.panel-heading a:focus {
+    outline: none;
+}
+
+.panel-heading a,
+.panel-heading a:hover,
+.panel-heading a:focus {
+    text-decoration: none;
+    color: #777777;
+}
+
+.faq-cat-content .panel-heading:hover {
+    background-color: #efefef;
+}
+
+.active-faq {
+    border-left: 5px solid #888888;
+}
+
+.panel-faq .panel-heading .panel-title span {
+    font-size: 13px;
+    font-weight: normal;
+}
+.aboutus-banner
+{
+	background: url(../images/aboutus.jpg) no-repeat center center !important;
+}
+
+.faq-banner
+{
+	background: url(../images/faq.jpg) no-repeat center center !important;
+}
+
+.privacy-banner
+{
+	background: url(../images/terms-conditions.jpg) no-repeat center center !important;
+}
+
+.panel-default > .panel-heading {
+  border-color: #ddd;
+}
+
+.panel-heading span
+{
+	color:#ffffff;
+	width:26px;
+	height:26px;
+	background:#b41b20;
+	float:left;
+	text-align:center;
+	-webkit-border-radius: 50%;
+	-moz-border-radius: 50%;
+	border-radius: 50%;
+	line-height:25px;
+	margin-right:10px;
+}
+
+.accordion-toggle
+{
+	color:#2e2e2e !important;
+	font-size:20px;
+}
+
+.active-faq
+{
+	border:none;
+}
+
+.popup-calendaer-cont
+{
+	width:100%;
+	float:left;
+	margin-bottom:25px;
+}
+
+.booking-form-cont
+{
+	width:100%;
+	float:left;
+}
+
+.bootstrap-select.btn-group .dropdown-menu {
+  box-sizing: border-box;
+  min-width: 100%;
+  z-index: 9999;
+}
+
+.bootstrap-select a
+{
+	width:100% !important;
+}
+
+.dropdown-toggle {
+  border-radius: 0;
+  font-size: 15px;
+  height: 40px;
+  padding: 6px 12px;
+}
+
+.total-price
+{
+	background:#2e2e2e;
+	width:auto;
+	float:left;
+	padding:5px;
+	color:#ffffff;
+	font-size:25px;
+	font-weight:400;
+		-webkit-border-radius:5px;
+	-moz-border-radius: 5px;
+	border-radius: 5px;
+}
+
+.btn-red
+{
+	background:#b41b20;
+	color:#ffffff;
+	font-size:20px;
+}
+
+.btn-cancel
+{
+	background:#2e2e2e;
+	font-size:20px;
+	color:#ffffff;
+}
+
+.btn-red:hover, .btn-cancel:hover
+{
+	color:#ffffff;
+}
+
+.modal-footer
+{
+	width:100%;
+	float:left;
+	border-top:#f0f0f0 solid 1px;
+}
+
+
+/*timepicker*/
+
+
+.bootstrap-timepicker-widget.dropdown-menu {
+  min-width: 160px;
+}
+
+.bootstrap-timepicker {
+  position: relative;
+}
+.bootstrap-timepicker.pull-right .bootstrap-timepicker-widget.dropdown-menu {
+  left: auto;
+  right: 0;
+}
+.bootstrap-timepicker.pull-right .bootstrap-timepicker-widget.dropdown-menu:before {
+  left: auto;
+  right: 12px;
+}
+.bootstrap-timepicker.pull-right .bootstrap-timepicker-widget.dropdown-menu:after {
+  left: auto;
+  right: 13px;
+}
+.bootstrap-timepicker .input-group-addon {
+  cursor: pointer;
+}
+.bootstrap-timepicker .input-group-addon i {
+  display: inline-block;
+  width: 16px;
+  height: 16px;
+}
+.bootstrap-timepicker-widget.dropdown-menu {
+  padding: 4px;
+}
+.bootstrap-timepicker-widget.dropdown-menu.open {
+  display: inline-block;
+}
+.bootstrap-timepicker-widget.dropdown-menu:before {
+  border-bottom: 7px solid rgba(0, 0, 0, 0.2);
+  border-left: 7px solid transparent;
+  border-right: 7px solid transparent;
+  content: "";
+  display: inline-block;
+  position: absolute;
+}
+.bootstrap-timepicker-widget.dropdown-menu:after {
+  border-bottom: 6px solid #FFFFFF;
+  border-left: 6px solid transparent;
+  border-right: 6px solid transparent;
+  content: "";
+  display: inline-block;
+  position: absolute;
+}
+.bootstrap-timepicker-widget.timepicker-orient-left:before {
+  left: 6px;
+}
+.bootstrap-timepicker-widget.timepicker-orient-left:after {
+  left: 7px;
+}
+.bootstrap-timepicker-widget.timepicker-orient-right:before {
+  right: 6px;
+}
+.bootstrap-timepicker-widget.timepicker-orient-right:after {
+  right: 7px;
+}
+.bootstrap-timepicker-widget.timepicker-orient-top:before {
+  top: -7px;
+}
+.bootstrap-timepicker-widget.timepicker-orient-top:after {
+  top: -6px;
+}
+.bootstrap-timepicker-widget.timepicker-orient-bottom:before {
+  bottom: -7px;
+  border-bottom: 0;
+  border-top: 7px solid #999;
+}
+.bootstrap-timepicker-widget.timepicker-orient-bottom:after {
+  bottom: -6px;
+  border-bottom: 0;
+  border-top: 6px solid #ffffff;
+}
+.bootstrap-timepicker-widget a.btn,
+.bootstrap-timepicker-widget input {
+  border-radius: 4px;
+}
+.bootstrap-timepicker-widget table {
+  width: 100%;
+  margin: 0;
+}
+.bootstrap-timepicker-widget table td {
+  text-align: center;
+  height: 30px;
+  margin: 0;
+  padding: 2px;
+}
+.bootstrap-timepicker-widget table td:not(.separator) {
+  min-width: 30px;
+}
+.bootstrap-timepicker-widget table td span {
+  width: 100%;
+}
+.bootstrap-timepicker-widget table td a {
+  border: 1px transparent solid;
+  width: 100%;
+  display: inline-block;
+  margin: 0;
+  padding: 8px 0;
+  outline: 0;
+  color: #333;
+}
+.bootstrap-timepicker-widget table td a:hover {
+  text-decoration: none;
+  background-color: #eee;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  border-radius: 4px;
+  border-color: #ddd;
+}
+.bootstrap-timepicker-widget table td a i {
+  margin-top: 2px;
+  font-size: 18px;
+}
+.bootstrap-timepicker-widget table td input {
+  width: 30px;
+  margin: 0;
+  text-align: center;
+}
+.bootstrap-timepicker-widget .modal-content {
+  padding: 4px;
+}
+@media (min-width: 767px) {
+  .bootstrap-timepicker-widget.modal {
+    width: 200px;
+    margin-left: -100px;
+  }
+}
+@media (max-width: 767px) {
+  .bootstrap-timepicker {
+    width: 100%;
+  }
+  .bootstrap-timepicker .dropdown-menu {
+    width: 100%;
+  }
 }
