--- a/themes/koocam/css/custom.css
+++ b/themes/koocam/css/custom.css
@@ -33,3 +33,8 @@ label{
 .fc-state-highlight {
     background:#fcf8e3 none repeat scroll 0 0;
 }
+
+.new-half-class.raty-icons {
+  float: none;
+  margin: 0 auto;
+}
