--- a/themes/koocam/css/responisve.css
+++ b/themes/koocam/css/responisve.css
@@ -225,6 +225,14 @@
 	display:none;
 }
 
+.navbar-nav > li > a {
+  line-height: 32px;
+}
+
+.notification-timing .mesage-details-2
+{
+	text-align:left !important;
+}
 
 }
 @media (min-width:768px) and (max-width:991px) {
@@ -312,7 +320,27 @@
 }
 
 
+.online-btn {
+  font-size: 20px !important;
+  margin-top: 5px !important;
+}
 
+.hidden-lg {
+display:none!important
+}
+
+.navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active > a:focus, .navbar-default .navbar-nav > .active > a:hover {
+	background-color: #b81a1e;
+	border: 2px solid #ffffff;
+	color: #ffffff;
+	-webkit-border-radius: 4px;
+	-moz-border-radius: 4px;
+	border-radius: 4px;
+}
+.navbar-default .navbar-nav > li > a:focus, .navbar-default .navbar-nav > li > a:hover {
+	background-color: transparent !important;
+	color: #ffffff !important;
+}
 }
 @media (min-width:992px) and (max-width:1199px) {
 .nav > li > a {
@@ -347,9 +375,38 @@
 {
 	font-size:28px;
 }
+.hidden-lg {
+display:none!important
+}
+
+.navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active > a:focus, .navbar-default .navbar-nav > .active > a:hover {
+	background-color: #b81a1e;
+	border: 2px solid #ffffff;
+	color: #ffffff;
+	-webkit-border-radius: 4px;
+	-moz-border-radius: 4px;
+	border-radius: 4px;
+}
+.navbar-default .navbar-nav > li > a:focus, .navbar-default .navbar-nav > li > a:hover {
+	background-color: transparent !important;
+	color: #ffffff !important;
+}
 }
 @media (min-width:1200px) {
 .hidden-lg {
 display:none!important
+}
+
+.navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active > a:focus, .navbar-default .navbar-nav > .active > a:hover {
+	background-color: #b81a1e;
+	border: 2px solid #ffffff;
+	color: #ffffff;
+	-webkit-border-radius: 4px;
+	-moz-border-radius: 4px;
+	border-radius: 4px;
+}
+.navbar-default .navbar-nav > li > a:focus, .navbar-default .navbar-nav > li > a:hover {
+	background-color: transparent !important;
+	color: #ffffff !important;
 }
 }
